fix: handle exception